# enes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: cpu.c.19FD52AE70347602.idx  cpu.h.069121B248CBBE22.idx  main.c.46E4CE8B339B43ED.idx
enes/: CMakeLists.txt
enes/src/: bus.c  bus.h  cartridge.c  cartridge.h  cpu.c  cpu.h  joypad.c  joypad.h  main.c  mirroring.h  op_code.c  op_code.h  ppu.c  ppu.h
enes/src/ppu/: addr.c  control.c  mask.c  ppu.c  ppu.h  registers.h  scroll.c  status.c
enes/src/render/: frame.c  frame.h  palette.c  palette.h  render.c  render.h  vec.h
